Custom--app/main/default/objects/LateFeeDefaultConfig__mdt/LateFeeDefaultConfig__mdt.object-meta.xml
<CustomObject>
    <description>Metadata used in Yardi batch files.</description>
    <label>LateFeeDefaultConfig</label>
    <pluralLabel>LateFeeDefaultConfigs</pluralLabel>
</CustomObject>