Custom--app/main/default/objects/LateFeeDefaultConfig__mdt/fields/HandleValue__c.field-meta.xml
<CustomField>
    <fullName>HandleValue__c</fullName>
    <label>HandleValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>