Custom--app/main/default/objects/LateFeeDefaultConfig__mdt/fields/HandleValueInt__c.field-meta.xml
<CustomField>
    <fullName>HandleValueInt__c</fullName>
    <label>HandleValueInt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>