Custom--app/main/default/objects/LateFeeDefaultConfig__mdt/fields/StringValue__c.field-meta.xml
<CustomField>
    <fullName>StringValue__c</fullName>
    <label>StringValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>